--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.14...3.22)
 
-# ----    Projecto    ----
+# ---- Projecto ----
 
 # Note: Actualiza la version
-
 project(
   Ejemplo
   VERSION 1.0
   LANGUAGES CXX
 )
 
-# ----  Añade guards  ----
+# ---- Añade guards ----
+
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
   message(
     FATAL_ERROR
@@ -33,13 +33,14 @@ CPMAddPackage(
   OPTIONS "FMT_INSTALL YES" # create an installable target
 )
 
+# ---- Añade archivos ----
 
-# ---  Añade archivos  ---
 # README: Es preferible usar el nombre de los archivos que se quieren compilar que el wildcard '*'
 file(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp")
 
 # ---- Crea libreria  ----
+
 # README: Si el proyecto es tipo header-only cambia PUBLIC por INTERFACE y crea una interfaz
 # target: add_library(${PROJECT_NAME} INTERFACE)
 add_library(${PROJECT_NAME} ${headers} ${sources})
@@ -56,8 +57,9 @@ target_include_directories(
                          $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
 )
 
-# ---- Create an installable target ----
+# ---- Crea e instala los target ----
 # this allows users to install and find the library via `find_package()`.
+
 # the location where the project's version header will be placed should match the project's regular
 # header paths
 string(TOLOWER ${PROJECT_NAME}/version.h VERSION_HEADER_LOCATION)
